# Sim_Core

./: .gitignore  APPLIED_MATERIALS_README.md  AutoMod_OHT_Materials_Comprehensive_Analysis_2026-07-15.docx  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  run_des_demo_ui.bat  run_simple_ui.bat
.github/workflows/: build-windows-desktop.yml  native-desktop-windows.yml
apps/: sim_core_cli.cpp
cmake/: Dependencies.cmake
desktop/: ENGLISH_ISAAC_BUILD.txt  README.md  app.py  app_base.py  app_wrapper.py  applied_share_finalizer.py  automod_modeling_patch.py  automod_pm_converter.py  build_windows.ps1  cad_graph_facility.py  cad_station_label_compat.py  curve_edge_fix.py  dxf_graph_converter.py  english_ui_patch.py  generate_app_icon.py  graph_enhancer_compat.py  graph_render_optimization.py  graph_ui_enhancer.py  graph_ui_patch.py  graph_ui_smoke_test.py  input_ui_compact_patch.py  isaac_sim_english_patch.py  isaac_sim_exporter.py  isaac_sim_modeling_patch.py  layout_static_analysis_patch.py  layout_static_preview_patch.py  pan_fix.py  rail_file.py  rail_static_analysis_compat.py  random_flow_analysis.py  random_flow_animation.py  random_flow_core_smoke_test.py  random_flow_ui.py  random_flow_ui_smoke_test.py  requirements.txt  smoke_test.py  test_automod_pm_converter.py  test_cad_graph_facility.py  test_dxf_graph_converter.py  test_isaac_sim_exporter.py  (+10 more)
development_src/command/: .gitignore
development_src/controller/: CMakeLists.txt
docs/: QUICK_UI_RUN.md
docs/architecture/: SIM_CORE_ARCHITECTURE_V1.md  SIM_CORE_ARCHITECTURE_V2.md  SIM_CORE_ARCHITECTURE_V3.md  SIM_CORE_ARCHITECTURE_V4.md  SIM_CORE_ARCHITECTURE_V5.md
docs/development/: DXF_GRAPH_CONVERTER.md  VERTICAL_SLICE_01.md  (+2 more)
run-output-ui/: event_trace.jsonl  run_manifest.json
tests/: sim_core_tests.cpp
tools/: des_demo_ui.py  repo_smoke_check.py  simple_runner_ui.py
ui/: README.md  run_ui.py  smoke_test.py
(+918 files in other folders)
